welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:24: error: value += is not a member of Int
    cpt+=1
       ^